push changes so I don't lose them